@@ -26,3 +26,4 @@ commands=
 
 [pytest]
 timeout = 20
+addopts = -rxXs
